--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,8 @@
-spring.datasource.url=jdbc:postgresql://postgres:5432/microservice-buyproduct
-spring.datasource.username=postgres
-spring.datasource.password=rotitunamayo
+# Database config
+spring.datasource.username = postgres.zvmcikumnphevucgqqbx
+spring.datasource.password = a3-adpro-murifq
+spring.datasource.driverClassName = org.postgresql.Driver
+spring.datasource.url = jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
