Change username and password

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
-spring.datasource.username = postgres.zvmcikumnphevucgqqbx
-spring.datasource.password = a3-adpro-murifq
+spring.datasource.username = postgres.fhnpbkhcxvsefbwdqhmr
+spring.datasource.password = a3-rifqi-anjay
 spring.datasource.driverClassName = org.postgresql.Driver
 spring.datasource.url = jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres
 spring.jpa.hibernate.ddl-auto=create-drop
